--- a/Solution/FastWorkspace.Client/Main.razor
+++ b/Solution/FastWorkspace.Client/Main.razor
@@ -1,4 +1,10 @@
-﻿<Router AppAssembly="@typeof(Main).Assembly">
+﻿@inject IAppConfiguration AppConfiguration
+
+<MudThemeProvider IsDarkMode="IsDarkMode" />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
+<Router AppAssembly="@typeof(Main).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
@@ -6,3 +12,7 @@
         <Redirect Url="@Routes.Index" />
     </NotFound>
 </Router>
+
+@code {
+    private bool IsDarkMode => AppConfiguration.GetTheme() == Theme.Dark;
+}
