--- a/Solution/FastWorkspace.Client/Pages/ConfigurationPage.razor
+++ b/Solution/FastWorkspace.Client/Pages/ConfigurationPage.razor
@@ -1,52 +1,60 @@
-﻿@using FastWorkspace.Domain.Common;
+﻿@using FastWorkspace.Client.Common.Theming;
+@using FastWorkspace.Client.Common.Utils;
+@using FastWorkspace.Domain.Common;
 @using FastWorkspace.Domain.Common.Localization;
 @using FastWorkspace.Domain.Jobs;
 @using System.Globalization;
+
+@implements IAsyncDisposable
 
 @inject IWorkspaceStore WorkspaceStore
 @inject IAppConfiguration AppConfiguration
 @inject NavigationManager Navigation
 @inject IStringLocalizer<AppLocales> Localize
+@inject ApplicationEventManager EventManager
 
 @attribute [Route(Routes.ConfigurationPage)]
 
-<main class="ma-16" style="height: 100%;">
-    <MudText Typo="Typo.h4" Class="mb-2">@Localize["Configuration.Title"]</MudText>
+<article>
+    <MudText Typo="Typo.h4" Class="mb-8">@Localize["Configuration.Title"]</MudText>
 
-    @if (_firstLaunch)
+    @if (!AppConfiguration.IsAppReady())
     {
-        <MudText Typo="Typo.subtitle1" Class="mb-4">@Localize["Configuration.WelcomeMessage"]</MudText>
+        <MudText Typo="Typo.subtitle1" Class="mb-8">@Localize["Configuration.WelcomeMessage"]</MudText>
     }
 
-    <MudStack Spacing="4">
+    <MudStack Spacing="8">
         <div>
             <MudText Typo="Typo.h6">@Localize["Configuration.Language.Label"]</MudText>
-            <MudRadioGroup @bind-SelectedOption="_language">
+            <MudRadioGroup T="Language" SelectedOption="_language" SelectedOptionChanged="OnLanguageChanged">
                 <MudRadio Option="Language.English" Color="Color.Primary">@Localize["Configuration.Language.English"]</MudRadio>
                 <MudRadio Option="Language.French" Color="Color.Primary">@Localize["Configuration.Language.French"]</MudRadio>
             </MudRadioGroup>
         </div>
         <div>
             <MudText Typo="Typo.h6">@Localize["Configuration.Theme.Label"]</MudText>
-            <MudRadioGroup @bind-SelectedOption="_theme">
+            <MudRadioGroup T="Theme" SelectedOption="_theme" SelectedOptionChanged="OnThemeChanged">
                 <MudRadio Option="Theme.Light" Color="Color.Primary">@Localize["Configuration.Theme.Light"]</MudRadio>
                 <MudRadio Option="Theme.Dark" Color="Color.Primary">@Localize["Configuration.Theme.Dark"]</MudRadio>
             </MudRadioGroup>
         </div>
         <div>
-            <MudText Typo="Typo.h6">@Localize["Configuration.FileStorage.Label"]</MudText>
-            <MudText Typo="Typo.body1" Class="mb-2">@Localize["Configuration.FileStorage.Help"]</MudText>
+            <MudText Typo="Typo.h6" Class="mb-2">@Localize["Configuration.FileStorage.Label"]</MudText>
+            <MudText Typo="Typo.body1" Class="mb-4">@Localize["Configuration.FileStorage.Help"]</MudText>
             <FolderPickerInput Label="@Localize["Configuration.FileStorage.FolderPicker.Label"]" @bind-FolderPath="_fileStorageDirectoryPath" />
         </div>
         <div class="mt-16">
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="string.IsNullOrWhiteSpace(_fileStorageDirectoryPath)" OnClick="OnSubmit">@Localize["Configuration.Save.Button"]</MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Default" OnClick="OnReset" Class="mr-4">@Localize["Configuration.Reset.Button"]</MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Disabled="string.IsNullOrWhiteSpace(_fileStorageDirectoryPath)" OnClick="OnSave">@Localize["Configuration.Save.Button"]</MudButton>
             <ErrorText Error="@_error" />
         </div>
     </MudStack>
-</main>
+</article>
 
 @code {
-    private bool _firstLaunch;
+    [CascadingParameter]
+    public ValueHolder<ThemeSettings> ThemeSettingValueHolder { get; set; } = null!;
+
     private Language _language;
     private Theme _theme;
     private string? _fileStorageDirectoryPath;
@@ -58,10 +66,24 @@
         _language = AppConfiguration.GetLanguage();
         _theme = AppConfiguration.GetTheme();
         _fileStorageDirectoryPath = AppConfiguration.GetFileStorageDirectoryPath();
-        _firstLaunch = _fileStorageDirectoryPath == null;
     }
 
-    private void OnSubmit()
+    private void OnLanguageChanged(Language language)
+    {
+        _language = language;
+
+        CultureInfo.CurrentCulture = _language.GetCulture();
+        CultureInfo.DefaultThreadCurrentCulture = CultureInfo.CurrentCulture;
+        CultureInfo.DefaultThreadCurrentUICulture = CultureInfo.CurrentCulture;
+    }
+
+    private async Task OnThemeChanged(Theme theme)
+    {
+        _theme = theme;
+        await ThemeSettingValueHolder.SetValue(new ThemeSettings(ThemeSettingValueHolder.Value.Theme, _theme == Theme.Dark));
+    }
+
+    private void OnSave()
     {
         if (string.IsNullOrWhiteSpace(_fileStorageDirectoryPath))
         {
@@ -73,11 +95,34 @@
             WorkspaceStore.SetupStore();
             AppConfiguration.SetLanguage(_language);
             AppConfiguration.SetTheme(_theme);
-            Navigation.NavigateTo(Routes.HomePage, forceLoad: true, replace: true);
+            Navigation.NavigateTo(Routes.HomePage, replace: true);
         }
         else
         {
             _error = Localize["Configuration.Errors.InvalidFileStorage"];
+        }
+    }
+
+    private void OnReset()
+    {
+        AppConfiguration.Reset();
+        Navigation.NavigateTo(Routes.Index, forceLoad: true, replace: true);
+    }
+
+    public async ValueTask DisposeAsync()
+    {
+        var savedLanguage = AppConfiguration.GetLanguage();
+
+        if (savedLanguage != _language)
+        {
+            OnLanguageChanged(savedLanguage);
+        }
+
+        var savedTheme = AppConfiguration.GetTheme();
+
+        if (savedTheme != _theme)
+        {
+            await OnThemeChanged(savedTheme);
         }
     }
 }
