--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -4,12 +4,13 @@
 @using MudBlazor
 
 @using FastWorkspace.Client
-@using FastWorkspace.Client.Shared
+@using FastWorkspace.Client.Common.Events
+
 @using FastWorkspace.Client.Shared.Atoms
+@using FastWorkspace.Client.Shared.Molecules
 @using FastWorkspace.Client.Shared.Layouts
 
 @using FastWorkspace.Domain
-@using FastWorkspace.Domain.Common
 @using FastWorkspace.Domain.Enums
 @using FastWorkspace.Domain.Jobs
 @using FastWorkspace.Domain.Navigation
