--- a/Solution/FastWorkspace.Client/Pages/Index.razor
+++ b/Solution/FastWorkspace.Client/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 @if (AppConfiguration.IsAppReady())
 {
-    <Redirect Url="@Routes.HomePage" />
+    <Redirect Url="@Routes.DashboardPage" />
 }
 else
 {
