rename app initialize service

--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -6,6 +6,7 @@
 @using Humanizer
 
 @using FastWorkspace.Client
+@using FastWorkspace.Client.Common.Controllers
 @using FastWorkspace.Client.Common.Events
 
 @using FastWorkspace.Client.Shared.Atoms
