--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -11,6 +11,7 @@
 
 @using FastWorkspace.Client.Shared.Atoms
 @using FastWorkspace.Client.Shared.Molecules
+@using FastWorkspace.Client.Shared.Organisms
 @using FastWorkspace.Client.Shared.Layouts
 
 @using FastWorkspace.Domain
