--- a/Solution/FastWorkspace.Client/Main.razor
+++ b/Solution/FastWorkspace.Client/Main.razor
@@ -3,20 +3,23 @@
 
 @inject IAppConfiguration AppConfiguration
 
-<MudThemeProvider IsDarkMode="_themeSettings.IsDarkMode" Theme="_themeSettings.Theme" />
-<MudDialogProvider />
-<MudSnackbarProvider />
+<GlobalErrorBoundary>
+    <MudThemeProvider IsDarkMode="_themeSettings.IsDarkMode" Theme="_themeSettings.Theme" />
+    <MudDialogProvider />
+    <MudSnackbarProvider />
+    <ErrorHandler />
 
-<CascadingValue Value="_cascadingThemeSettings">
-    <Router AppAssembly="@typeof(Main).Assembly">
-        <Found Context="routeData">
-            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        </Found>
-        <NotFound>
-            <Redirect Url="@Routes.Index" />
-        </NotFound>
-    </Router>
-</CascadingValue>
+    <CascadingValue Value="_cascadingThemeSettings">
+        <Router AppAssembly="@typeof(Main).Assembly">
+            <Found Context="routeData">
+                <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            </Found>
+            <NotFound>
+                <Redirect Url="@Routes.Index" />
+            </NotFound>
+        </Router>
+    </CascadingValue>
+</GlobalErrorBoundary>
 
 @code {
     private ThemeSettings _themeSettings = null!;
@@ -26,10 +29,10 @@
     {
         _themeSettings = new ThemeSettings(new MudTheme(), AppConfiguration.GetTheme() == Theme.Dark);
 
-        _cascadingThemeSettings = new ValueHolder<ThemeSettings>(_themeSettings, OnThemeSettingsChanged);
+        _cascadingThemeSettings = new ValueHolder<ThemeSettings>(_themeSettings, ThemeSettingsChange);
     }
 
-    private void OnThemeSettingsChanged(ThemeSettings themeSettings)
+    private void ThemeSettingsChange(ThemeSettings themeSettings)
     {
         _themeSettings = themeSettings;
         StateHasChanged();
