--- a/Solution/FastWorkspace.Client/Pages/DashboardPage.razor
+++ b/Solution/FastWorkspace.Client/Pages/DashboardPage.razor
@@ -1,8 +1,10 @@
 ﻿@using FastWorkspace.Domain.Common;
 
+@implements IDisposable
+
 @attribute [Route(Routes.DashboardPage)]
 
-@inject IWorkspaceStore WorkspaceStore
+@inject WorkspaceController WorkspaceController
 @inject IStringLocalizer<AppLocales> Localize
 
 <MudContainer MaxWidth="MaxWidth.Large">
@@ -12,14 +14,14 @@
             <MudText Typo="Typo.subtitle1">@Localize["Dashboard.Description"]</MudText>
         </div>
         <div>
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="AddWorkspace">@Localize["Dashboard.AddWorkspaceButton"]</MudButton>
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="OpenCreateWorkspaceDialog">@Localize["Dashboard.CreateWorkspaceButton"]</MudButton>
         </div>
     </MudStack>
 
     @if (_workspaces != null)
     {
-        <div Class="d-flex flex-wrap gap-4 mx-n2">
-            @foreach (var workspace in OrderedWorkspaces)
+        <div Class="d-flex flex-wrap gap-4 mx-n2 mb-16">
+            @foreach (var workspace in _workspaces.OrderBy(x => x.LastModifiedDate))
             {
                 <WorkspaceCard @key="workspace.Id" Workspace="workspace" />
             }
@@ -30,28 +32,25 @@
 @code {
     private IEnumerable<Workspace>? _workspaces;
 
-    private IEnumerable<Workspace> OrderedWorkspaces => _workspaces?.OrderBy(x => x.LastModifiedDate) ?? Enumerable.Empty<Workspace>();
-
-    private string? _error;
-    private string? _script;
-
-    protected override Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync()
     {
-        return Refresh();
+        WorkspaceController.AddWorkspaceChangedListener(GetWorkspaces);
+        await GetWorkspaces();
     }
 
-    private async Task Refresh()
+    private async Task GetWorkspaces()
     {
-        var result = await WorkspaceStore.GetAllAsync();
-        _workspaces = result.Content;
+        _workspaces = await WorkspaceController.GetWorkspaces();
     }
 
-    private async Task AddWorkspace()
+    private void OpenCreateWorkspaceDialog()
     {
-        // todo: ouvrir le modal de création de workspace
-        var workspace = Demo.CreateFakeWorkSpace($"Demo {_workspaces!.Count() + 1}");
-        await WorkspaceStore.AddOrUpdateAsync(workspace);
-        await Refresh();
+        WorkspaceController.OpenCreateWorkspaceDialog();
+    }
+
+    public void Dispose()
+    {
+        WorkspaceController.RemoveWorkspaceChangedListener(GetWorkspaces);
     }
 }
 
