bug fix and improve global error

--- a/Solution/FastWorkspace.Client/Pages/DashboardPage.razor
+++ b/Solution/FastWorkspace.Client/Pages/DashboardPage.razor
@@ -41,6 +41,7 @@
     private async Task GetWorkspaces()
     {
         _workspaces = await WorkspaceController.GetWorkspaces();
+        StateHasChanged();
     }
 
     private void OpenCreateWorkspaceDialog()
