--- a/Solution/FastWorkspace.Client/Shared/Organisms/GlobalErrorBoundary.razor
+++ b/Solution/FastWorkspace.Client/Shared/Organisms/GlobalErrorBoundary.razor
@@ -8,10 +8,13 @@
         @ChildContent
     </ChildContent>
     <ErrorContent>
-        <MudContainer MaxWidth="MaxWidth.Medium">
-            <MudText Typo="Typo.h3">@Localize["GlobalError.Title"]</MudText>
-            <MudText Typo="Typo.body1">@Localize["GlobalError.Message"]<MudLink Href="https://github.com/Dicosaedrique/fast-workspace/issues">@Localize["GlobalError.Message.Link"]</MudLink>.</MudText>
-            <MudButton Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Refresh" Color="Color.Error">@Localize["GlobalError.Button"]</MudButton>
+        <MudContainer MaxWidth="MaxWidth.Medium" Style="position: absolute; top: 45%; left: 50%; transform: translate(-50%, -50%);">
+            <MudText Typo="Typo.h1" Align="Align.Center" Class="mb-8">🤒</MudText>
+            <MudText Typo="Typo.h3" Align="Align.Center" Class="mb-8">@Localize["GlobalError.Title"]</MudText>
+            <MudText Typo="Typo.h6" Align="Align.Center" Class="mb-16">@Localize["GlobalError.Message"]<MudLink Typo="Typo.h6" Href="https://github.com/Dicosaedrique/fast-workspace/issues">@Localize["GlobalError.Message.Link"]</MudLink>.</MudText>
+            <div style="width: 100%; text-align: center">
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Refresh" Color="Color.Error" OnClick="RefreshApp">@Localize["GlobalError.Button"]</MudButton>
+            </div>
         </MudContainer>
     </ErrorContent>
 </ErrorBoundary>
