--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -8,6 +8,7 @@
 @using FastWorkspace.Client
 @using FastWorkspace.Client.Common.Controllers
 @using FastWorkspace.Client.Common.Events
+@using FastWorkspace.Client.Common.Services
 
 @using FastWorkspace.Client.Shared.Atoms
 @using FastWorkspace.Client.Shared.Molecules
