--- a/Solution/FastWorkspace.Client/Shared/Layouts/MainLayout.razor
+++ b/Solution/FastWorkspace.Client/Shared/Layouts/MainLayout.razor
@@ -6,6 +6,7 @@
     @if (AppConfiguration.IsAppReady())
     {
         <MudDrawer Open>
+            <MudText Typo="Typo.h6" Align="Align.Center" Class="mt-4">Fast Workspace</MudText>
             <NavMenu />
         </MudDrawer>
     }
