--- a/Solution/FastWorkspace.Client/Shared/Organisms/WorkspaceDialog.razor
+++ b/Solution/FastWorkspace.Client/Shared/Organisms/WorkspaceDialog.razor
@@ -3,9 +3,11 @@
 
 <MudDialog>
     <DialogContent>
-        <MudForm @ref="_form" @bind-IsValid="_success">
-            <MudTextField T="string" @bind-Value="@_workspace.Name" Label="@Localize["Workspace.Dialog.Name.Label"]" Required="true" RequiredError="@Localize["Workspace.Dialog.Name.RequiredError"]" />
-            <MudTextField T="string" @bind-Value="@_workspace.Description" Label="@Localize["Workspace.Dialog.Description.Label"]" Lines="5" />
+        <MudForm @ref="_form" @bind-IsValid="_success" Class="mb-6">
+            <MudStack Spacing="8">
+                <MudTextField T="string" @bind-Value="@_workspace.Name" Label="@Localize["Workspace.Dialog.Name.Label"]" Required="true" RequiredError="@Localize["Workspace.Dialog.Name.RequiredError"]" />
+                <MudTextField T="string" @bind-Value="@_workspace.Description" Label="@Localize["Workspace.Dialog.Description.Label"]" Lines="5" />
+            </MudStack>
         </MudForm>
     </DialogContent>
     <DialogActions>
