--- a/Solution/FastWorkspace.Client/Shared/Organisms/WorkspaceScriptDialog.razor
+++ b/Solution/FastWorkspace.Client/Shared/Organisms/WorkspaceScriptDialog.razor
@@ -7,7 +7,7 @@
 
 <MudDialog>
     <DialogContent>
-        <MudStack Row Justify="Justify.SpaceBetween">
+        <MudStack Row Justify="Justify.SpaceBetween" Class="mt-4 mb-8">
             <div>
                 <MudSwitch T="bool" Checked="_highlight" CheckedChanged="HighlightChange" Label="@Localize["Workspace.Script.Highlight.Label"]" Color="Color.Primary" />
                 <MudSwitch T="bool" Checked="_startChevron" CheckedChanged="StartChevronChange" Label="@Localize["Workspace.Script.StartChevron.Label"]" Color="Color.Primary" />
@@ -17,7 +17,7 @@
             </div>
         </MudStack>
 
-        <div class="mt-6 mb-16">
+        <div class="mb-16">
             @_displayableScript
         </div>
     </DialogContent>
@@ -37,6 +37,7 @@
 
     protected override async Task OnParametersSetAsync()
     {
+        MudDialog.SetTitle(string.Format(Localize["Workspace.Script.Title"], Workspace.Name));
         await UpdateDisplayableScript();
     }
 
@@ -62,4 +63,8 @@
     {
         await WorkspaceController.PromptExecuteWorkspaceScript(Workspace);
     }
+
+    // todo: nice to have
+    // - copy to clipboard the script
+    // - save the script in a file
 }
