refactor app (wip)

--- a/Solution/FastWorkspace.Client/Main.razor
+++ b/Solution/FastWorkspace.Client/Main.razor
@@ -1,7 +1,4 @@
-﻿@using FastWorkspace.Client.Common.Theming;
-@using FastWorkspace.Client.Common.Utils;
-
-@inject IAppConfiguration AppConfiguration
+﻿@inject IAppConfiguration AppConfiguration
 
 <MudThemeProvider IsDarkMode="_themeSettings.IsDarkMode" Theme="_themeSettings.Theme" />
 
