--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -2,21 +2,23 @@
 @using Microsoft.Extensions.Localization
 
 @using MudBlazor
-
 @using Humanizer
 
-@using FastWorkspace.Client
 @using FastWorkspace.Client.Common.Controllers
 @using FastWorkspace.Client.Common.Events
+@using FastWorkspace.Client.Common.Navigation
 @using FastWorkspace.Client.Common.Services
+@using FastWorkspace.Client.Common.Theming
+@using FastWorkspace.Client.Common.Utils
 
 @using FastWorkspace.Client.Shared.Atoms
 @using FastWorkspace.Client.Shared.Molecules
 @using FastWorkspace.Client.Shared.Organisms
 @using FastWorkspace.Client.Shared.Layouts
 
-@using FastWorkspace.Domain
 @using FastWorkspace.Domain.Enums
-@using FastWorkspace.Domain.Jobs
-@using FastWorkspace.Domain.Navigation
+@using FastWorkspace.Domain.Model
+@using FastWorkspace.Domain.Model.Jobs
+@using FastWorkspace.Domain.Model.Terminal
 @using FastWorkspace.Domain.Services
+@using FastWorkspace.Domain.Services.Declarations
